[package]
name = "gif_probe"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["novacrazy <novacrazy@gmail.com>"]

[patch.crates-io]
argh = { git = "https://github.com/novacrazy/argh" }

[dependencies]
argh = { version = "0.1", default-features = false, features = ["help"] }
gif = "0.13"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
debug = false
panic = "abort"
